Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBooleanBoolObjField.quorum
class Main
    Boolean v
    v:SetValue(true)
    action Main
        Test(v)
    end

    action Test(boolean var)
        if var = true
            output "passed"
        end
    end
end
