Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjBoolObjField.quorum
class Main
    Boolean v
    v:SetValue(true)
    action Main
        Test(v)
    end

    action Test(Integer var)
    end
end
